--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@
   <div class="dropdown">
     <button onclick="toggleDropdown()" class="dropdown-button">📚 الفهرس</button>
     <div id="myDropdown" class="dropdown-content">
-      <a href="a.html">1 - الرئيسية</a>
-      <a href="b.html">2 - بنية الذكاء الاصطناعي</a>
-      <a href="c.html">3 - أنواع الذكاء الاصطناعي</a>
-      <a href="d.html">4 - كيف يعمل الذكاء الاصطناعي</a>
-      <a href="e.html">5 - مراحل تطور الذكاء الاصطناعي</a>
-      <a href="f.html">6 - مجالات الذكاء الاصطناعي</a>
-      <a href="g.html">7 - أبرز علماء ومطورو الذكاء الاصطناعي</a>
-      <a href="h.html">8 - دور البرمجة والشبكات في تطور الذكاء الاصطناعي</a>
-      <a href="j.html">9 - مخاوف الذكاء الاصطناعي مستقبلًا</a>
-      <a href="k.html">10 - تواصل معنا</a>
+      <a href="index.html">1 - الرئيسية</a>
+      <a href="k.html">2 - بنية الذكاء الاصطناعي</a>
+      <a href="l.html">3 - أنواع الذكاء الاصطناعي</a>
+      <a href="m.html">4 - كيف يعمل الذكاء الاصطناعي</a>
+      <a href="n.html">5 - مراحل تطور الذكاء الاصطناعي</a>
+      <a href="o.html">6 - مجالات الذكاء الاصطناعي</a>
+      <a href="p.html">7 - أبرز علماء ومطورو الذكاء الاصطناعي</a>
+      <a href="q.html">8 - دور البرمجة والشبكات في تطور الذكاء الاصطناعي</a>
+      <a href="r.html">9 - مخاوف الذكاء الاصطناعي مستقبلًا</a>
+     
     </div>
   </div>
 
